--- a/Views/Shared/_MasterLayout.cshtml
+++ b/Views/Shared/_MasterLayout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Support", "Support", "Home")</li>
+                    <li>@Html.ActionLink("Blog", "Index", "Blog")</li>
                 </ul>
             </div>
         </div>
